# petals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  autograd.hpp  gradients.hpp  main.cpp  resource.hpp  tensor.hpp
.github/workflows/: cmake.yml
include/: autograd.hpp  composition.hpp  gradients.hpp  kernels.hpp  logger.hpp  ops.hpp  resource.hpp  tensor.hpp
source/: composition.cpp  gradients.cpp  kernels.cpp  resource.cpp  tensor.cpp
tests/benchmark/: main.cpp
tests/features/: main.cpp
tests/gradients/: main.cpp
tests/mnist/: main.cpp
